2017-07-11  Frederic Wang  <fwang@igalia.com>

        Add attribute allow-top-navigation-by-user-activation to iframe sandbox
        https://bugs.webkit.org/show_bug.cgi?id=171327

        Reviewed by Chris Dumez.

        Tests: http/tests/security/frameNavigation/sandbox-ALLOWED-top-navigation-with-user-gesture-1.html
               http/tests/security/frameNavigation/sandbox-ALLOWED-top-navigation-with-user-gesture-2.html
               imported/w3c/web-platform-tests/html/semantics/embedded-content/the-iframe-element/iframe_sandbox_allow_top_navigation_by_user_activation_without_user_gesture-expected.txt
               imported/w3c/web-platform-tests/html/semantics/embedded-content/the-iframe-element/iframe_sandbox_allow_top_navigation-3-expected.txt

        * dom/Document.cpp:
        (WebCore::Document::canNavigate): Case 2 of conformance verification is refined to match the
        current specification: Top navigation is allowed when it is triggered by user activation and
        when allow-top-navigation-by-user-activation is set. Because we have additional "security
        origin" rules with respect to the specification we also add some early return to ensure that
        navigation is really allowed for this new case.
        * dom/SecurityContext.cpp:
        (WebCore::SecurityContext::isSupportedSandboxPolicy): Add allow-top-navigation-by-user-activation flag.
        (WebCore::SecurityContext::parseSandboxPolicy): Parse the new flag to allow top user
        navigation by user activation. Also, make sure that allow-top-navigation allows such
        navigation as defined by the specification.
        * dom/SecurityContext.h: Declare new sandboxing flag.

2017-07-23  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS WK2] 5 DataInteractionTests are failing: observed selection rects after dropping don't match expected values
        https://bugs.webkit.org/show_bug.cgi?id=174769
        <rdar://problem/33478864>

        Reviewed by Tim Horton.
