@@ -1,3 +1,14 @@
+2017-07-24  Zan Dobersek  <zdobersek@igalia.com>
+
+        [CoordinatedGraphics] Remove unused GLDefs.h header
+        https://bugs.webkit.org/show_bug.cgi?id=174712
+
+        Reviewed by Michael Catanzaro.
+
+        * platform/graphics/opengl/GLDefs.h: Remove this unused header.
+        As far as my recollection goes it was used in the IPC-based
+        CoordinatedGraphics subsystem, which has been removed already.
+
 2017-07-11  Frederic Wang  <fwang@igalia.com>
 
         Add attribute allow-top-navigation-by-user-activation to iframe sandbox
